@@ -561,6 +561,25 @@ class StateWithConflictingMachineTest < Test::Unit::TestCase
   end
 end
 
+class StateWithConflictingMachineNameTest < Test::Unit::TestCase
+  def setup
+    require 'stringio'
+    @original_stderr, $stderr = $stderr, StringIO.new
+    
+    @klass = Class.new
+    @state_machine = StateMachine::Machine.new(@klass, :state)
+  end
+  
+  def test_should_output_warning_if_name_conflicts
+    StateMachine::State.new(@state_machine, :state)
+    assert_equal "Instance method \"state?\" is already defined in #{@klass} :state instance helpers, use generic helper instead.\n", $stderr.string
+  end
+  
+  def teardown
+    $stderr = @original_stderr
+  end
+end
+
 class StateWithNamespaceTest < Test::Unit::TestCase
   def setup
     @klass = Class.new
